--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="https://2pnfseijea6ulgg55mds3uygzpkakhwkg7xbwabrfxaasothaflq.arweave.net/09pZEQkgPUWY3esHLdMGy9QFHso37hsAMS3ACTpnAVc?ext=png" height="200" width="200" alt="Money Boy"></td>
+      <td><img src="https://2pnfseijea6ulgg55mds3uygzpkakhwkg7xbwabrfxaasothaflq.arweave.net/09pZEQkgPUWY3esHLdMGy9QFHso37hsAMS3ACTpnAVc?ext=png" height="200" width="200" alt="DTP"></td>
       <td>
         <h1>Julian Ramirez</h1>
         <p><em>Project Manager at <strong>Facilities Rehabilitation, Inc.</strong></em></p>
